[css] fix pgbar too long when surpassing the target

--- a/pgbar.css
+++ b/pgbar.css
@@ -9,6 +9,7 @@
   width: 100%;
   position: relative;
   border: 1px solid #d1d1d1;
+  overflow: hidden;
 }
 
 .pgbar-current {
